--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ permalink: none
 
 texture:
   title: Art Kelly
-  tagline: Computer Science Student at the university of Sheffield
+  tagline: Computer Science Graduate from the university of Sheffield
   date_format: "%b %-d, %Y"
   style: black
   showNav: true
